amadeus/static/css/base/amadeus.css
/* ... */
.imgTimeLine{
    width: 100%;
    height: auto;
    padding-top: 10px;
}
.timeLine div .col-md-11{
    padding-left: 0px;
}
.timeLine div .col-md-11 i{
    padding-right: 5px;
}

/*TIMELINE CLASSES END*/

.notification-count {
    background-color: #FF0000;
}

.img-list-user{
  width: 150px;
  height: 150px;
}

.datepicker{z-index:9999 !important}

ul, li {
  list-style-type: none !important;
  text-decoration: none !important;
}

.icon_edit_remove{
  float: right;
}


/* core/index.html classes*/

.logo-login{
  margin-top: 15px;
  margin-bottom: 15px;
  width:50%;
}
.forgotPassword{
  padding-bottom: 10px;
}
.form-group{
  margin-top: 5px;
}

/* core/register_user.html classes*/

.block-register-inline{
  float: left;
  display: inline-block;
}

/* core/reset_password.html classes*/
.send-reset-email{
  float: right;
}

/* forum post loaded */
@-webkit-keyframes loaded {
    0% {
        background-color: Yellow;
        opacity: 0.2;
    }
    22% {
        background-color: Yellow;
        opacity: 0.3;
    }
    77% {
        background-color: Yellow;
        opacity: 0.6;
    }
    100% {
        background-color: White;
    }
}

.loaded {
    -webkit-animation-name: loaded;
    -webkit-animation-duration: 900ms;
    -webkit-animation-iteration-count: 3;
    -webkit-animation-timing-function: ease-in-out;
}
/* Icon Topic */
.divMoreActions {
  text-align: right; height: 30px; float: right;
}

.divMoreActions > .btn-group {
  margin: 0px !important;
}

.moreAccordion {
  height: 30px;
}
/*.divMoreActions div button {padding-left: 10px; padding-right: 10px; padding-bottom: 10px; margin-bottom: 4px; height: 31px;}*/

.moreAccordion button{margin-bottom: 0px; margin-top: 8px;}
.titleTopic {padding-top: 10px; padding-bottom: 10px;}
.titleTopic a h4, .titleTopic h4{color: white;}
.titleTopic a:hover{text-decoration: none;}
.Topic-detail a h4{color: black;}
/* .titleTopic a h4 {margin-top: 0px; color: black; cursor:pointer;}*/
.dropdown-menu .pull-right {
    right: 0;
  }
.cards-content{ padding-left: 0px; padding-right: 0px; }
.cards-detail{margin-left: 4%;}
.cards-detail .panel .panel-heading{/*background-color:;*/}
.cards-detail .panel .panel-heading h4{color:black;}
.course, .subject, .topic{ padding-top: 0px; padding-bottom: 0px; }
.course-detail{padding-top: 10px; padding-bottom: 10px;}

.course-card{
  margin-bottom: 0.4% !important;
}

.course-card-group{
  margin-bottom: 1%;
}
.data_register_course p{ color: grey; }
.category-course-link{
  font-size: 24px;
  color: black !important;
}

/* Menu link remove radius */
.nav-pills > li > a {
  border-radius: 0px;
}

.float-button{
  float: right;
  position: fixed;
  bottom: 5%;
  right: 5%;
  font-size: 20px;
}

/* === Amadeus settings*/
#panel2 .form-group{
  margin: 0;
}

#panel2 .col-md-2, #panel2 .col-md-10{
  padding-left: 0;
}

